--- a/LCMSFrontEnd/templates/main/home.html
+++ b/LCMSFrontEnd/templates/main/home.html
@@ -3,9 +3,24 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="jumbotron">
-    <h1 class="display-4">Welcome to LCMS!</h1>
-    <p class="lead">This is the homepage of the Law Case Management System.</p>
+    <h1 class="display-4">Welcome to the LCMS</h1>
+    <p class="lead">The Law Case Management System (LCMS) is a comprehensive tool designed to simplify and streamline the management of legal cases and client data for law firms.</p>
     <hr class="my-4">
-    <p>Use the navigation bar to log in, sign up, or execute SQL queries.</p>
+    <h3>About LCMS:</h3>
+    <p>The LCMS is powered by a detailed database that contains all the essential components of needed for a legal case management system. 
+        It allows for the effective storage, retrieval, and manipulation of legal data, including client information, case files, invoices, and historical records. 
+        This ensures that all important data is stored in an organized and accessible manner.</p>
+
+    <h3>What LCMS Accomplishes:</h3>
+    <p>The LCMS makes handling legal cases faster and more accurate by cutting down on time spent entering and finding data. 
+        Its organized structure ensures information is reliable and free from errors. The system can also grow with a law firm's needs, 
+        making it easy to manage large amounts of data while keeping everything user-friendly.</p>
+
+    <h3>Core Features:</h3>
+    <p>With LCMS, users can create and access accounts to personalize their experience. The system supports direct SQL query execution 
+        to interact with the database for analysis and data management. Users can retrieve, update, and delete records related to legal cases, clients, and invoices. 
+        Additionally, LCMS includes a dedicated contact page for support and assistance.</p>
 </div>
 {% endblock %}
+
+
